[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Stats.gd" type="Script" id=1]
[ext_resource path="res://Fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/campo.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=2]
size = 135
outline_size = 5
outline_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 5
outline_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 5
outline_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.737255, 0.0196078, 0.0196078, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.737255, 0.0196078, 0.0196078, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.737255, 0.0196078, 0.0196078, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.737255, 0.0196078, 0.0196078, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.67451, 0, 0, 1 )

[node name="Stats" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Back" type="Button" parent="CanvasLayer/Control"]
anchor_right = 0.444
anchor_bottom = 0.1
margin_top = 24.0
margin_right = 8.31998
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
text = "BACK"
flat = true

[node name="TotalScore" type="Label" parent="CanvasLayer/Control"]
anchor_left = 0.011
anchor_top = 0.212
anchor_right = 0.989
anchor_bottom = 0.256
margin_left = 0.0799994
margin_top = 0.639984
margin_right = -0.0800171
margin_bottom = 8.31998
custom_fonts/font = SubResource( 3 )
text = "Total Score: 0"

[node name="DeleteSaves" type="Button" parent="CanvasLayer/Control"]
margin_left = 16.0
margin_top = 776.0
margin_right = 288.0
margin_bottom = 816.0
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Delete Saves"

[node name="Confirm" type="Button" parent="CanvasLayer/Control"]
visible = false
margin_left = 16.0
margin_top = 864.0
margin_right = 296.0
margin_bottom = 904.0
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Delete it"

[node name="Keep" type="Button" parent="CanvasLayer/Control"]
visible = false
margin_left = 16.0
margin_top = 952.0
margin_right = 296.0
margin_bottom = 992.0
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Keep it"

[node name="Campo" type="Sprite" parent="."]
position = Vector2( 960, 640 )
scale = Vector2( 2.88889, 1 )
texture = ExtResource( 3 )

[connection signal="pressed" from="CanvasLayer/Control/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/DeleteSaves" to="." method="_on_DeleteSaves_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Keep" to="." method="_on_Keep_pressed"]
